[project]
name = "ranlibx"
version = "0.0.3"
description = "Global interface for RAN"
authors = [{ name = "Ameer Arsala", email = "ameer.arsala03@gmail.com" }]
dependencies = [
  "fastapi>=0.112.2,<0.113",
  "typer>=0.12.5,<0.13",
  "httpx>=0.27.2,<0.28",
  "pydantic>2.0",
  "rich>=13.7.1,<13.8",
  "uvicorn[standard]>=0.30.6,<0.31",
  "email-validator>=2.2.0,<3",
]
requires-python = ">= 3.9"

[project.scripts]
ranx = "ranlibx.cli.main:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

#[tool.hatch.build.targets.wheel]
#packages = ["ranx"]  # account for discrepancy between ranlibx and ranx

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
ranlibx = { path = ".", editable = true }

[tool.pixi.feature.devdeps.dependencies]
pytest = "*"
hatch = "*"
ruff = ">=0.6.8,<0.7"

# [tool.pixi.tasks]
## ranx = "python3 ranlibx/cli/main.py"

[tool.pixi.feature.devdeps.tasks]
build = "hatch build ./dist"

[tool.pixi.environments]
dev = { features = ["devdeps"] }
prod = { features = [] }
