[project]
name = "ranlibx"
version = "0.0.24"
description = "Global interface for RAN"
authors = [{ name = "Ameer Arsala", email = "ameer.arsala03@gmail.com" }]
dependencies = [
  "fastapi>=0.112.2,<0.113",
  "typer>=0.12.5,<0.13",
  "httpx>=0.27.2,<0.28",
  "pydantic>2.0",
  "uvicorn[standard]>=0.30.6,<0.31",
  "email-validator>=2.2.0,<3", 
  "rich>=13.8.1,<14",
]
requires-python = ">= 3.9"

[project.scripts]
ranx = "ranlibx.cli.main:app"

[project.optional-dependencies]
fdev = ["hatch>=1.12.0,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
ranlibx = { path = ".", editable = true }

[tool.pixi.feature.fdev.dependencies]
ruff = ">=0.6.8,<0.7"
pytest = ">=8.3.3,<9"

# [tool.pixi.tasks]
## ranx = "python3 ranlibx/cli/main.py"

[tool.pixi.feature.fdev.tasks]
setup = "pipelight enable git-hooks"
build = "hatch build ./dist"

[tool.pixi.environments]
dev = { features = ["fdev"] }
prod = { features = [] }
